add_executable(WindowInvestigator_TransparentFullscreenWindow "TransparentFullscreenWindow.c")
target_link_libraries(WindowInvestigator_TransparentFullscreenWindow
	PRIVATE WindowInvestigator_tracing
)
set_property(TARGET WindowInvestigator_TransparentFullscreenWindow PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
